branch AppsRoute notfound

--- a/src/app/person/man/man.component.html
+++ b/src/app/person/man/man.component.html
@@ -1,4 +1,4 @@
 <p>
   man works! {{varParam.id}} {{varParam.name}}
-  <a [routerLink]="['/children',]">children</a>
+  <a routerLink='/children'>children</a>
 </p>
